--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "~1.0.1",
+    "cookie-parser": "^1.4.3",
     "express": "~4.0.0",
     "formidable": "^1.0.17",
     "jsonwebtoken": "^7.1.9",
